log
Fri 12 May 2023 06:09:43 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:19: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   22 |   if(!pq -> size) return;
      |                   ^~~~~~
heap.c:20:7: note: declared here
   20 | void* heap_top(Heap* pq)
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1269447
Fri 12 May 2023 06:10:24 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:25: error: ‘pq->heapArray’ is a pointer; did you mean to use ‘->’?
   24 |   return pq -> heapArray.data;
      |                         ^
      |                         ->
heap.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
   25 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ecb3c35
Fri 12 May 2023 06:10:35 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:26: error: expected expression before ‘]’ token
   24 |   return pq -> heapArray[].data;
      |                          ^
heap.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
   25 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3573840
Fri 12 May 2023 06:10:43 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
5e612a2
Fri 12 May 2023 06:13:24 PM UTC: 
 heap.c | 25 ++++++++++++++++++++++---
 1 file changed, 22 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:39:10: error: expected expression before ‘int’
   39 |   while (int i = pq -> size > 0 && priority > pq -> heapArray[(i - 1) / 2].priority)
      |          ^~~
heap.c:41:21: error: ‘i’ undeclared (first use in this function)
   41 |     pq -> heapArray[i] = pq -> heapArray[(i - 1) / 2];
      |                     ^
heap.c:41:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b839e15
Fri 12 May 2023 06:14:50 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 25/70
232c4b0
Fri 12 May 2023 06:15:13 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
6fd0e3f
Fri 12 May 2023 06:15:19 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
9d93f00
Fri 12 May 2023 06:15:41 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
854a582
Fri 12 May 2023 06:16:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
68303ec
Mon 15 May 2023 12:16:39 AM UTC: 
 heap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  7|1
total_score: 60/70
4c79392
Mon 15 May 2023 12:16:56 AM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|2
total_score: 35/70
cc04446
Mon 15 May 2023 12:17:18 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 35/70
6a08b8f
Mon 15 May 2023 12:17:39 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
5558daa
Mon 15 May 2023 12:17:49 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
3d4cf51
Mon 15 May 2023 12:18:02 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
82601bd
